--- a/index.html
+++ b/index.html
@@ -68,16 +68,14 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="cid-rRv6keznlw" id="image2-6">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="cid-rRv6keznlw" id="image2-6">
 
     
 
     <figure class="mbr-figure">
         <div class="image-block" style="width: 100%;">
             <img src="assets/images/network.jpeg" alt="Mobirise" title="">
-            <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                <div class="pb-5 px-3 mbr-white align-center mbr-fonts-style display-1">We are developing the future.</div>
-            </figcaption>
+            
         </div>
     </figure>
 </section>
