--- a/jobs.html
+++ b/jobs.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><section class="features8 cid-rRxstYFk5X mbr-parallax-background" id="features8-y">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="features8 cid-rRxstYFk5X mbr-parallax-background" id="features8-y">
 
     
 
