--- a/jobs.html
+++ b/jobs.html
@@ -55,7 +55,7 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbrib-devices mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Products</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>Atomic | Fallout</a><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>Blox CSS</a><a class="text-white dropdown-item display-4" href="https://mobirise.co"></a><a class="text-white dropdown-item display-4" href="fruity.html"><span class="mbri-browse mbr-iconfont mbr-iconfont-btn"></span>Fruity (beta)</a><a class="text-white dropdown-item display-4" href="https://biz.borgcreative.com" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>Ads (beta)</a></div>
+                        Products</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>Atomic | Fallout</a><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>Blox CSS</a><a class="text-white dropdown-item display-4" href="https://mobirise.co"></a><a class="text-white dropdown-item display-4" href="fruity.html"><span class="mbri-browse mbr-iconfont mbr-iconfont-btn"></span>Fruity (beta)</a><a class="text-white dropdown-item display-4" href="https://biz.borgcreative.com/beta/ads.html" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>Ads (beta)</a></div>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="animation.html" aria-expanded="false"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>
                         Animation</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="research.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-database mbr-iconfont mbr-iconfont-btn"></span>
                         Research</a></li></ul>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="features8 cid-rRxstYFk5X mbr-parallax-background" id="features8-y">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="features8 cid-rRxstYFk5X mbr-parallax-background" id="features8-y">
 
     
 
