--- a/jobs.html
+++ b/jobs.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="features8 cid-rRxstYFk5X mbr-parallax-background" id="features8-y">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="features8 cid-rRxstYFk5X mbr-parallax-background" id="features8-y">
 
     
 
