--- a/research.html
+++ b/research.html
@@ -52,7 +52,7 @@
                          <img src="assets/images/bctlogo.png" alt="Mobirise" title="" style="height: 6.2rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Borg Creative Technologies &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Borg Creative Studios &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="features8 cid-rRviakxLs8 mbr-parallax-background" id="features8-o">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="features8 cid-rRviakxLs8 mbr-parallax-background" id="features8-o">
 
     
 
@@ -162,7 +162,7 @@
 
                         <div class="card-texts">
                              <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  518</h3>
+                                  520</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                                 Code commits in the last year</h4>
                             
@@ -259,7 +259,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    Borg Creative Technologies</p>
+                    Borg Creative Studios</p>
             </div>
         </div>
     </div>
