--- a/timeline.html
+++ b/timeline.html
@@ -48,11 +48,11 @@
                          <img src="assets/images/bctlogo.png" alt="Mobirise" title="" style="height: 6.2rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Borg Creative Technologies &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Borg Creative Studios &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbrib-devices mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Products</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>Atomic | Fallout</a><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>Blox CSS</a><a class="text-white dropdown-item display-4" href="https://mobirise.co"></a><a class="text-white dropdown-item display-4" href="fruity.html"><span class="mbri-browse mbr-iconfont mbr-iconfont-btn"></span>Fruity (beta)</a><a class="text-white dropdown-item display-4" href="https://biz.borgcreative.com/beta/ads.html" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>Ads (beta)</a></div>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="timeline1 cid-rRvfx4erV1" id="timeline1-m">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="timeline1 cid-rRvfx4erV1" id="timeline1-m">
 
     
 
@@ -169,7 +169,7 @@
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">BCT Ads Developed</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">BCS Ads Developed</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
                             We began developing and testing our privacy-based ad platform.
                         </p>
@@ -250,7 +250,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    Borg Creative Technologies</p>
+                    Borg Creative Studios</p>
             </div>
         </div>
     </div>
