--- a/jobs.html
+++ b/jobs.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="features8 cid-rRxstYFk5X mbr-parallax-background" id="features8-y">
+<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="features8 cid-rRxstYFk5X mbr-parallax-background" id="features8-y">
 
     
 
@@ -156,7 +156,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
