Fruity Beta 1.5 released

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="menu cid-rRv010iyQr" once="menu" id="menu1-8">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="menu cid-rRv010iyQr" once="menu" id="menu1-8">
 
     
 
