--- a/fruity.html
+++ b/fruity.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section info3 cid-rRxvxdVzy7 mbr-parallax-background" id="info3-1b">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section info3 cid-rRxvxdVzy7 mbr-parallax-background" id="info3-1b">
 
     
 
@@ -83,7 +83,7 @@
                 <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5">
                     Fruity is a minimalist web browser designed for ministry and social media management. Fruity is currently in beta.</h3>
                 
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-warning display-4" href="https://dev.jacobborgprogramming.net/fruity/Fruity.app.zip"><span class="mbrib-download mbr-iconfont mbr-iconfont-btn"></span>Download Beta (MacOS 10.15)</a> <a class="btn btn-warning display-4" href="https://dev.jacobborgprogramming.net/fruity/FruityClassic.zip"><span class="mbrib-download mbr-iconfont mbr-iconfont-btn"></span>Download Beta (MacOS 10.12+)</a></div>
+                <div class="mbr-section-btn align-left py-4"><a class="btn btn-warning display-4" href="https://dev.jacobborgprogramming.net/fruity/Fruity.app.zip"><span class="mbrib-download mbr-iconfont mbr-iconfont-btn"></span>Download Beta (MacOS 10.12+)</a></div>
             </div>
         </div>
     </div>
@@ -111,7 +111,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbri-apple" style="color: rgb(3, 218, 198); fill: rgb(3, 218, 198);"></span>
+                    <span class="mbr-iconfont mobi-mbri-apple mobi-mbri" style="color: rgb(3, 218, 198); fill: rgb(3, 218, 198);"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
@@ -134,7 +134,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbrib-users" style="color: rgb(3, 218, 198); fill: rgb(3, 218, 198);"></span>
+                    <span class="mbr-iconfont mobi-mbri-user-2 mobi-mbri" style="color: rgb(3, 218, 198); fill: rgb(3, 218, 198);"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
