--- a/privacy.html
+++ b/privacy.html
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="menu cid-rRxsRNn2X3" once="menu" id="menu1-11">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="menu cid-rRxsRNn2X3" once="menu" id="menu1-11">
 
     
 
