--- a/fruity.html
+++ b/fruity.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section info3 cid-rRxvxdVzy7 mbr-parallax-background" id="info3-1b">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section info3 cid-rRxvxdVzy7 mbr-parallax-background" id="info3-1b">
 
     
 
@@ -251,8 +251,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
