--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
 
     
 
