Like W/ Privacy alpha release!

--- a/youlikedwithprivacy.html
+++ b/youlikedwithprivacy.html
@@ -8,12 +8,12 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/youlikedwithprivacy-meta.jpeg">
   <meta property="og:image" content="assets/images/youlikedwithprivacy-meta.jpeg">
-  <meta name="twitter:title" content="like">
+  <meta name="twitter:title" content="Liked W/ Privacy">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/bctlogo.png" type="image/x-icon">
-  <meta name="description" content="Website Maker Description">
+  <meta name="description" content="">
   
-  <title>like</title>
+  <title>Liked W/ Privacy</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-rXHIFlFohH mbr-fullscreen mbr-parallax-background" id="header2-25">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rXHIFlFohH mbr-fullscreen mbr-parallax-background" id="header2-25">
 
     
 
