--- a/likewithprivacy.html
+++ b/likewithprivacy.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rXHU4fK0eZ mbr-fullscreen mbr-parallax-background" id="header2-28">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rXHU4fK0eZ mbr-fullscreen mbr-parallax-background" id="header2-28">
 
     
 
@@ -141,7 +141,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong><em>Like W/ Privacy</em></strong> is easy to set up! Just fill out them form, get approved, then copy and paste!</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong><em>Like W/ Privacy</em></strong> is easy to set up! Just fill out the form, get approved, then copy and paste!</p>
                     </div>
                 </div>
 
