--- a/fruity.html
+++ b/fruity.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section info3 cid-rRxvxdVzy7 mbr-parallax-background" id="info3-1b">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section info3 cid-rRxvxdVzy7 mbr-parallax-background" id="info3-1b">
 
     
 
