--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
 
     
 
