--- a/fruity.html
+++ b/fruity.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/fruity-meta.jpeg">
   <meta name="twitter:title" content="Fruity">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/bctlogo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/bcs-logo.png" type="image/x-icon">
   <meta name="description" content="Fruity Web Browser is a minimalist browser designed for ministry and social media management.">
   
   <title>Fruity</title>
@@ -50,14 +50,14 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/bctlogo.png" alt="Mobirise" title="" style="height: 6.2rem;">
+                         <img src="assets/images/bcs-logo.png" alt="Mobirise" title="" style="height: 6.2rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Borg Creative Studios &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbrib-devices mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Products</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank"><span class="mbrib-lock mbr-iconfont mbr-iconfont-btn"></span>Atomic | Fallout</a><a class="text-white dropdown-item display-4" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/index.html" target="_blank"><span class="mbrib-code mbr-iconfont mbr-iconfont-btn"></span>Blox CSS</a><a class="text-white dropdown-item display-4" href="https://mobirise.co"></a><a class="text-white dropdown-item display-4" href="fruity.html"><span class="mbri-browse mbr-iconfont mbr-iconfont-btn"></span>Fruity (beta)</a><a class="text-white dropdown-item display-4" href="https://biz.borgcreative.com/" target="_blank"><span class="mbrib-contact-form mbr-iconfont mbr-iconfont-btn"></span>Ads (beta)</a></div>
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section info3 cid-rRxvxdVzy7 mbr-parallax-background" id="info3-1b">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section info3 cid-rRxvxdVzy7 mbr-parallax-background" id="info3-1b">
 
     
 
