--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/research-meta.jpeg">
   <meta name="twitter:title" content="Research">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/bctlogo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/bcs-logo.png" type="image/x-icon">
   <meta name="description" content="">
   
   <title>Research</title>
@@ -50,7 +50,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/bctlogo.png" alt="Mobirise" title="" style="height: 6.2rem;">
+                         <img src="assets/images/bcs-logo.png" alt="Mobirise" title="" style="height: 6.2rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Borg Creative Studios &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></span>
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="features8 cid-rRviakxLs8 mbr-parallax-background" id="features8-o">
+<section class="engine"><a href="https://mobirise.info/b">create a website</a></section><section class="features8 cid-rRviakxLs8 mbr-parallax-background" id="features8-o">
 
     
 
