--- a/fruityfeatures.html
+++ b/fruityfeatures.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section info3 cid-rURwtkbNuG mbr-parallax-background" id="info3-1r">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section info3 cid-rURwtkbNuG mbr-parallax-background" id="info3-1r">
 
     
 
