Added interactive page

--- a/index.html
+++ b/index.html
@@ -64,15 +64,10 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
                     <a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">
-                        Software</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="https://dev.jacobborgprogramming.net/atomicwebsite/" target="_blank">Atomic</a><a class="text-info dropdown-item display-4" href="fruity.html">Fruity (Beta)</a></div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Services
-                    </a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html">Animation</a><a class="text-info dropdown-item display-4" href="https://biz.borgcreative.com/ads.html" target="_blank">Ads (Beta)</a><a class="text-info dropdown-item display-4" href="likewithprivacy.html">Like W/ Privacy (Beta)</a></div>
-                </li>
+                        Products</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="https://biz.borgcreative.com/ads.html" target="_blank">Ads (Beta)</a><a class="text-info dropdown-item display-4" href="likewithprivacy.html">Like W/ Privacy (Beta)</a><a class="text-info dropdown-item display-4" href="fruity.html">Fruity (Beta)</a></div>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.com" aria-expanded="false" data-toggle="dropdown-submenu">Entertainment</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html" aria-expanded="true">Animation</a><a class="text-info dropdown-item display-4" href="interactive.html" aria-expanded="true">Interactive</a></div></li>
                 
                 <li class="nav-item">
                     <a class="nav-link link text-info display-4" href="research.html">Research</a>
@@ -83,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
