--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
 
     
 
