added GameJolt link

--- a/fruityfeatures.html
+++ b/fruityfeatures.html
@@ -55,7 +55,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="features9 cid-rURwUshgw3" id="features9-1w">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features9 cid-rURwUshgw3" id="features9-1w">
 
     
 
@@ -243,6 +243,10 @@
                     </div><div class="soc-item">
                         <a href="https://www.facebook.com/Borg-Creative-Studios-107076941107675/?tn-str=k*F" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
+                        </a>
+                    </div><div class="soc-item">
+                        <a href="https://gamejolt.com/@BorgCreativeStudios" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social sli-game-controller"></span>
                         </a>
                     </div></div>
             </div>
