--- a/interactive.html
+++ b/interactive.html
@@ -65,7 +65,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="features8 cid-s6DFtHk5wu" id="features8-32">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="features8 cid-s6DFtHk5wu" id="features8-32">
 
     
 
@@ -171,6 +171,10 @@
                     </div><div class="soc-item">
                         <a href="https://www.facebook.com/Borg-Creative-Studios-107076941107675/?tn-str=k*F" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
+                        </a>
+                    </div><div class="soc-item">
+                        <a href="https://gamejolt.com/@BorgCreativeStudios" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social sli-game-controller"></span>
                         </a>
                     </div></div>
             </div>
