--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
   <meta name="description" content="Here at Borg Creative Technologies, we are developing solutions.">
   
   <title>Home</title>
+  <link rel="stylesheet" href="assets/simple-line-icons/simple-line-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -64,7 +65,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">
                         Products</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="https://biz.borgcreative.com/ads.html" target="_blank">Ads (Beta)</a><a class="text-info dropdown-item display-4" href="likewithprivacy.html">Like W/ Privacy (Beta)</a><a class="text-info dropdown-item display-4" href="fruity.html">Fruity (Beta)</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.com" aria-expanded="false" data-toggle="dropdown-submenu">Entertainment</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html" aria-expanded="true">Animation</a><a class="text-info dropdown-item display-4" href="interactive.html" aria-expanded="true">Interactive</a></div></li>
@@ -78,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
@@ -214,6 +215,10 @@
                         <a href="https://www.facebook.com/Borg-Creative-Studios-107076941107675/?tn-str=k*F" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
                         </a>
+                    </div><div class="soc-item">
+                        <a href="https://gamejolt.com/@BorgCreativeStudios" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social sli-game-controller"></span>
+                        </a>
                     </div></div>
             </div>
             <div class="row row-copirayt">
@@ -225,16 +230,16 @@
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
