--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
@@ -143,8 +143,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">We produce our applications with usability and privacy in mind. All of our applications and services respect privacy and are easy to use.</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="fruity.html" class="btn btn-primary display-4">
-                            Fruity</a> <a href="likewithprivacy.html" class="btn btn-primary display-4">
-                            Like W/ Privacy</a></div>
+                            Fruity</a></div>
                 </div>
             </div>
 
