--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item text-info display-4" href="https://gamejolt.com/games/grocerycatcher/523501" aria-expanded="false" target="_blank">Grocery Catcher</a>
                         <a class="dropdown-item text-info display-4" href="fruity.html" aria-expanded="false">Fruity</a>
-                        <a class="dropdown-item text-info display-4" href="https://biz.borgcreative.com/ads.html" aria-expanded="false">Ads</a>
+                        <a class="dropdown-item text-info display-4" href="https://biz.borgcreative.com/ads.html" aria-expanded="false" target="_blank">Ads</a>
                     </div>
                 </li>
 
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
