added new Grocery Catcher icon

--- a/fruity.html
+++ b/fruity.html
@@ -54,7 +54,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="features1 cid-rRxwFJxy67" id="features1-1d">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features1 cid-rRxwFJxy67" id="features1-1d">
     
     
 
@@ -283,8 +283,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
