--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section article content1 cid-salrDDMtbg" id="content2-3k">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="mbr-section article content1 cid-salrDDMtbg" id="content2-3k">
 
      
 
@@ -196,8 +196,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
