--- a/fruityfeatures.html
+++ b/fruityfeatures.html
@@ -55,7 +55,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="features9 cid-rURwUshgw3" id="features9-1w">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features9 cid-rURwUshgw3" id="features9-1w">
 
     
 
@@ -328,8 +328,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
