--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
@@ -190,7 +190,7 @@
                                 <div class="wrapper">
                                     <!--Image-->
                                     <div class="mbr-figure" style="width: 50%;">
-                                        <img src="assets/images/desktop-icon-512.png" alt="Mobirise" title="">
+                                        <img src="assets/images/avocado1.png" alt="Mobirise" title="">
                                     </div>
                                 </div>
                             </div>
@@ -299,8 +299,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
