added Lenses page

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-salrb9P3nu mbr-fullscreen mbr-parallax-background" id="header2-3j">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-salrb9P3nu mbr-fullscreen mbr-parallax-background" id="header2-3j">
 
     
 
