--- a/bct/mk2-bar-1.html
+++ b/bct/mk2-bar-1.html
@@ -3,6 +3,7 @@
   <head>
     <!--BCS Ads MK2-->
     <meta charset="utf-8">
+    <script async src="https://tracking.venturify.at/pixel/38sekgT25etzrufA"></script>
   </head>
   <body>
 
