--- a/bct/mk2-bar-2.html
+++ b/bct/mk2-bar-2.html
@@ -2,24 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <!--BCS Ads MK2-->
-    <title>general/politics/entertainment/non-profit</title>
+    <title>general/entertainment/media</title>
     <meta charset="utf-8">
     <script async src="https://tracking.venturify.at/pixel/38sekgT25etzrufA"></script>
   </head>
   <body>
 
 <div class="gallery">
-  <a target="_blank" href="https://kutt.it/cMt0dj">
-    <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog" width="30%" height="auto">
+  <a target="_blank" href="https://kutt.it/1EnvMD">
+    <img src="musicad1.png" alt="Jacob D Borg - Music" width="30%" height="auto">
   </a>
-  <div hidden class="desc">Let's chat about current issues over coffee.</div>
+  <div hidden class="desc">Listen to Jacob D Borg's latest song!</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="https://kutt.it/wXTmup">
-    <img src="wdm.png" alt="Wave Digital Ministries Network" width="30%" height="auto">
+  <a target="_blank" href="https://kutt.it/gTmYEg">
+    <img src="gttAD.PNG" alt="Grounds Tech Talk" width="30%" height="auto">
   </a>
-  <div hidden class="desc">We are merging ministry & technology.</div>
+  <div hidden class="desc">Let's Talk Tech and Coffee.</div>
 </div>
 
 <div class="gallery">
