--- a/fruityfeatures.html
+++ b/fruityfeatures.html
@@ -60,7 +60,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html" aria-expanded="false">
                         HOME</a></li>
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-info display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
+                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item text-info display-4" href="https://gamejolt.com/games/grocerycatcher/523501" aria-expanded="false" target="_blank">Grocery Catcher</a>
                         <a class="dropdown-item text-info display-4" href="fruity.html" aria-expanded="false">Fruity</a>
@@ -91,7 +91,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section info3 cid-rURwtkbNuG mbr-parallax-background" id="info3-1r">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section info3 cid-rURwtkbNuG mbr-parallax-background" id="info3-1r">
 
     
 
@@ -181,9 +181,9 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title py-3 mbr-fonts-style display-7">
-                            Simple Presentations</h4>
+                            Media</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           Fruity has a simple presentation tool built-in. This makes presenting to your friends or family easy and free!</p>
+                           Fruity has simple, light-weight media tools and viewers built-in.&nbsp;</p>
                     </div>
                 </div>
             </div>
