updated fruity pages to include new logo and materials

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-salrb9P3nu mbr-fullscreen mbr-parallax-background" id="header2-3j">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="cid-salrb9P3nu mbr-fullscreen mbr-parallax-background" id="header2-3j">
 
     
 
