--- a/bct/mk2-bar-fruity.html
+++ b/bct/mk2-bar-fruity.html
@@ -4,26 +4,26 @@
     <!--BCS Ads MK2-->
     <title>general/entertainment/media</title>
     <meta charset="utf-8">
-    <script async src="https://tracking.venturify.at/pixel/gXwPDF4EUptaX9P6"></script>
+    <script async src="https://tracking.venturify.at/pixel/9xKGHpYz5YAspWFX"></script>
   </head>
   <body>
 
     <div class="gallery">
-      <a target="_blank" href="https://kutt.it/cMt0dj">
+      <a href="https://kutt.it/cMt0dj">
         <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog" width="30%" height="auto">
       </a>
       <div hidden class="desc">Let's chat about current issues over coffee.</div>
     </div>
 
 <div class="gallery">
-  <a target="_blank" href="https://kutt.it/1EnvMD">
+  <a href="https://kutt.it/1EnvMD">
     <img src="musicad1.png" alt="Jacob D Borg - Music" width="30%" height="auto">
   </a>
   <div hidden class="desc">Listen to Jacob D Borg's latest song!</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="https://kutt.it/AvTyTk">
+  <a href="https://kutt.it/AvTyTk">
     <img src="grocerycatcher1.png" alt="Grocery Catcher" width="30%" height="auto">
   </a>
   <div hidden class="desc">Catch the food with your cart and avoid the rapidly approaching boulders!</div>
