added what's new page

--- a/fruity.html
+++ b/fruity.html
@@ -91,7 +91,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="cid-saSws5hcEH mbr-fullscreen mbr-parallax-background" id="header2-4n">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-saSws5hcEH mbr-fullscreen mbr-parallax-background" id="header2-4n">
 
     
 
