added news letter sign up

--- a/fruity.html
+++ b/fruity.html
@@ -59,7 +59,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site creator</a></section><section class="header1 cid-saSwAvxo53" id="header16-4o">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header1 cid-saSwAvxo53" id="header16-4o">
 
     
 
