--- a/whatsnew.html
+++ b/whatsnew.html
@@ -41,7 +41,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
 
     
 
