--- a/chartm.html
+++ b/chartm.html
@@ -8,16 +8,16 @@
 
     function drawChart() {
       var data = google.visualization.arrayToDataTable([
-        ['Site', 'Social Accounts','JacobBorgProgramming','GroundsTechTalk 1','GroundsTechTalk 2', 'TheRenderBlog', 'CoffeeWithJake Sites'],
-        ['Estimated site views (JAN, 2020)',       0, 336, 242, 0, 0, 0],
-        ['Estimated site views (FEB, 2020)',       0, 737, 187, 13, 0, 0],
-        ['Estimated site views (MAR, 2020)',       795, 651, 112, 23, 54, 0],
-        ['Estimated site views (APR, 2020)',       524, 786, 70, 9, 4, 0],
-        ['Estimated site views (MAY, 2020)',       1126, 872, 94, 1, 47, 15],
-        ['Estimated site views (JUN, 2020)',        1181, 877, 66, 4, 0, 0],
-        ['Estimated site views (JUL, 2020)',        1305, 840, 117, 1, 4, 146],
-        ['Estimated site views (AUG, 2020)',        1133, 1098, 73, 0, 9, 223],
-        ['Estimated site views (SEP, 2020)',        317, 579, 23, 0, 0, 242]
+        ['Site', 'Social Accounts','JacobBorgProgramming','GroundsTechTalk 1','GroundsTechTalk 2', 'TheRenderBlog', 'CoffeeWithJake Sites','Fruity'],
+        ['Estimated views (JAN, 2020)',       0, 336, 242, 0, 0, 0, 0],
+        ['Estimated views (FEB, 2020)',       0, 737, 187, 13, 0, 0,0],
+        ['Estimated views (MAR, 2020)',       795, 651, 112, 23, 54, 0,0],
+        ['Estimated views (APR, 2020)',       524, 786, 70, 9, 4, 0,0],
+        ['Estimated views (MAY, 2020)',       1126, 872, 94, 1, 47, 15,0],
+        ['Estimated views (JUN, 2020)',        1181, 877, 66, 4, 0, 0,0],
+        ['Estimated views (JUL, 2020)',        1305, 840, 117, 1, 4, 146,0],
+        ['Estimated views (AUG, 2020)',        1133, 1098, 73, 0, 9, 223,0],
+        ['Estimated views (SEP, 2020)',        442, 799, 55, 0, 0, 376, 12]
       ]);
 
       var options = {
