--- a/page13.html
+++ b/page13.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html" aria-expanded="false">
                         HOME</a></li>
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-info display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
+                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item text-info display-4" href="https://gamejolt.com/games/grocerycatcher/523501" aria-expanded="false" target="_blank">Grocery Catcher</a>
                         <a class="dropdown-item text-info display-4" href="fruity.html" aria-expanded="false">Fruity</a>
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header10 cid-saD2krJR0j mbr-fullscreen mbr-parallax-background" id="header10-43">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header10 cid-saD2krJR0j mbr-fullscreen mbr-parallax-background" id="header10-43">
 
     
 
@@ -134,7 +134,7 @@
                     <div class="card col-12 col-md-6 col-lg-4 pb-md-4">
                         <div class="panel-item align-center">
                             <div class="card-img pb-3">
-                                <h3 class="img-text mbr-fonts-style display-1">706</h3>
+                                <h3 class="img-text mbr-fonts-style display-1">511</h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Network Views</h4>
@@ -146,7 +146,7 @@
                     <div class="card col-12 col-md-6 col-lg-4 last-child">
                         <div class="panel-item align-center">
                             <div class="card-img pb-3">
-                                <h3 class="img-text mbr-fonts-style display-1">1161</h3>
+                                <h3 class="img-text mbr-fonts-style display-1">1672</h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Network Views</h4>
@@ -273,8 +273,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   
 </body>
 </html>
