--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
@@ -137,7 +137,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Host ads with us and reach new customers! Our platform respects privacy by not using cookings and we don't sell data.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page12.html" class="btn btn-primary display-4">Marketing</a></div>
+                    <div class="mbr-section-btn text-center"><a href="page12.html" class="btn btn-danger display-4">Marketing</a> <a href="lenses.html" class="btn btn-danger display-4">Social Lenses</a></div>
                 </div>
             </div>
 
@@ -149,7 +149,7 @@
                             Entertainment</h4>
                         <p class="mbr-text mbr-fonts-style display-7">We are producing games, interactive web content, and animations for your enjoyment!&nbsp;</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="animation.html" class="btn btn-primary display-4">Animation</a> <a href="interactive.html" class="btn btn-primary display-4">Interactive</a></div>
+                    <div class="mbr-section-btn text-center"><a href="animation.html" class="btn btn-danger display-4">Animation</a> <a href="interactive.html" class="btn btn-danger display-4">Interactive</a></div>
                 </div>
             </div>
 
@@ -161,7 +161,7 @@
                             Software</h4>
                         <p class="mbr-text mbr-fonts-style display-7">We produce our applications with usability and privacy in mind. All of our applications and services respect privacy and are easy to use.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="fruity.html" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="fruity.html" class="btn btn-danger display-4">
                             Fruity</a></div>
                 </div>
             </div>
