--- a/newsletter.html
+++ b/newsletter.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-saY5Q8IhpM mbr-fullscreen mbr-parallax-background" id="header2-4w">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="cid-saY5Q8IhpM mbr-fullscreen mbr-parallax-background" id="header2-4w">
 
     
 
